--- a/deployment/shiny-server.conf
+++ b/deployment/shiny-server.conf
@@ -4,12 +4,12 @@ run_as shiny;
 server {
   listen 3838;
 
-  location /kegg-app {
+  location / {
     site_dir /srv/shiny-server/kegg-app;
     log_dir /var/log/shiny-server;
     
     # Extended timeouts for KEGG data loading and bioinformatics processing
-    app_init_timeout 120;
+    app_init_timeout 1200;
     app_idle_timeout 600;
     
     # Connection settings optimized for data-heavy applications
