remove hover info

--- a/deployment/shiny-server.conf
+++ b/deployment/shiny-server.conf
@@ -1,4 +1,4 @@
-# Shiny Server Configuration for KEGG Pathway Visualizer
+# Shiny Server Configuration for KEGG Pathway Visualizer - Performance Optimized
 run_as shiny;
 
 server {
@@ -11,8 +11,5 @@ server {
     # Extended timeouts for KEGG data loading and bioinformatics processing
     app_init_timeout 1200;
     app_idle_timeout 600;
-    
-    # Connection settings optimized for data-heavy applications
-    simple_scheduler 30;
   }
 }
